update simulator dockerfile

--- a/simulator/Dockerfile
+++ b/simulator/Dockerfile
@@ -22,6 +22,8 @@ FROM alpine:3.19
 WORKDIR /
 
 COPY --from=builder /simulator /simulator
+COPY --from=builder /app/data /data
+
 # COPY --from=builder /drive-service-account.json /drive-service-account.json
 
 COPY --from=builder /usr/share/zoneinfo /usr/share/zoneinfo
