--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,13 +11,13 @@ services:
       KAFKA_SASL_USERNAME: $KAFKA_SASL_USERNAME
       KAFKA_SASL_PASSWORD: $KAFKA_SASL_PASSWORD
 
-  # simulator-1:
-  #   image: ridesharing_simulator:latest
-  #   environment:
-  #     NUM_RIDERS: 100
-  #     NUM_DRIVERS: 70
-  #     CITY: "San Jose"
-  #     KAFKA_BROKER: $KAFKA_BROKER
-  #     KAFKA_SCHEMA_REGISTRY: $KAFKA_SCHEMA_REGISTRY
-  #     KAFKA_SASL_USERNAME: $KAFKA_SASL_USERNAME
-  #     KAFKA_SASL_PASSWORD: $KAFKA_SASL_PASSWORD
+  simulator-1:
+    image: ridesharing_simulator:latest
+    environment:
+      NUM_RIDERS: 300
+      NUM_DRIVERS: 360
+      CITY: "San Jose"
+      KAFKA_BROKER: $KAFKA_BROKER
+      KAFKA_SCHEMA_REGISTRY: $KAFKA_SCHEMA_REGISTRY
+      KAFKA_SASL_USERNAME: $KAFKA_SASL_USERNAME
+      KAFKA_SASL_PASSWORD: $KAFKA_SASL_PASSWORD
