--- a/web/package.json
+++ b/web/package.json
@@ -22,7 +22,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
     "@types/mapbox-gl": "^3.1.0",
-    "axios": "^1.6.5",
+    "axios": "^1.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
@@ -33,9 +33,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
+    "react-superstore": "^0.1.4",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vite-plugin-svgr": "^4.2.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
