--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "dotenv": "^16.3.1",
     "lucide-react": "^0.309.0",
     "mapbox-gl": "^3.4.0",
