added server to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,23 @@
 name: ridesharing-sim
 services:
+  server:
+    image: ridesharing_server:latest
+    ports:
+      - $PORT:$PORT
+    environment:
+      PORT: $PORT
+      SINGLESTORE_HOST: $SINGLESTORE_HOST
+      SINGLESTORE_PORT: $SINGLESTORE_PORT
+      SINGLESTORE_USERNAME: $SINGLESTORE_USERNAME
+      SINGLESTORE_PASSWORD: $SINGLESTORE_PASSWORD
+      SINGLESTORE_DATABASE: $SINGLESTORE_DATABASE
+      SNOWFLAKE_ACCOUNT: $SNOWFLAKE_ACCOUNT
+      SNOWFLAKE_USER: $SNOWFLAKE_USER
+      SNOWFLAKE_PASSWORD: $SNOWFLAKE_PASSWORD
+      SNOWFLAKE_WAREHOUSE: $SNOWFLAKE_WAREHOUSE
+      SNOWFLAKE_DATABASE: $SNOWFLAKE_DATABASE
+      SNOWFLAKE_SCHEMA: $SNOWFLAKE_SCHEMA
+
   simulator-0:
     image: ridesharing_simulator:latest
     environment:
