--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,9 @@
 name: ridesharing-sim
 services:
+  web:
+    image: ridesharing_web:latest
+    network_mode: host
+
   server:
     image: ridesharing_server:latest
     ports:
@@ -25,7 +29,6 @@ services:
       NUM_DRIVERS: 280
       CITY: "San Francisco"
       KAFKA_BROKER: $KAFKA_BROKER
-      KAFKA_SCHEMA_REGISTRY: $KAFKA_SCHEMA_REGISTRY
       KAFKA_SASL_USERNAME: $KAFKA_SASL_USERNAME
       KAFKA_SASL_PASSWORD: $KAFKA_SASL_PASSWORD
 
@@ -36,7 +39,6 @@ services:
       NUM_DRIVERS: 188
       CITY: "San Jose"
       KAFKA_BROKER: $KAFKA_BROKER
-      KAFKA_SCHEMA_REGISTRY: $KAFKA_SCHEMA_REGISTRY
       KAFKA_SASL_USERNAME: $KAFKA_SASL_USERNAME
       KAFKA_SASL_PASSWORD: $KAFKA_SASL_PASSWORD
 
@@ -47,7 +49,6 @@ services:
       NUM_DRIVERS: 50
       CITY: "Cupertino"
       KAFKA_BROKER: $KAFKA_BROKER
-      KAFKA_SCHEMA_REGISTRY: $KAFKA_SCHEMA_REGISTRY
       KAFKA_SASL_USERNAME: $KAFKA_SASL_USERNAME
       KAFKA_SASL_PASSWORD: $KAFKA_SASL_PASSWORD
 
@@ -58,7 +59,6 @@ services:
       NUM_DRIVERS: 100
       CITY: "Daly City"
       KAFKA_BROKER: $KAFKA_BROKER
-      KAFKA_SCHEMA_REGISTRY: $KAFKA_SCHEMA_REGISTRY
       KAFKA_SASL_USERNAME: $KAFKA_SASL_USERNAME
       KAFKA_SASL_PASSWORD: $KAFKA_SASL_PASSWORD
 
@@ -69,7 +69,6 @@ services:
       NUM_DRIVERS: 100
       CITY: "Fremont"
       KAFKA_BROKER: $KAFKA_BROKER
-      KAFKA_SCHEMA_REGISTRY: $KAFKA_SCHEMA_REGISTRY
       KAFKA_SASL_USERNAME: $KAFKA_SASL_USERNAME
       KAFKA_SASL_PASSWORD: $KAFKA_SASL_PASSWORD
 
@@ -80,7 +79,6 @@ services:
       NUM_DRIVERS: 80
       CITY: "Hayward"
       KAFKA_BROKER: $KAFKA_BROKER
-      KAFKA_SCHEMA_REGISTRY: $KAFKA_SCHEMA_REGISTRY
       KAFKA_SASL_USERNAME: $KAFKA_SASL_USERNAME
       KAFKA_SASL_PASSWORD: $KAFKA_SASL_PASSWORD
 
@@ -91,7 +89,6 @@ services:
       NUM_DRIVERS: 40
       CITY: "Milpitas"
       KAFKA_BROKER: $KAFKA_BROKER
-      KAFKA_SCHEMA_REGISTRY: $KAFKA_SCHEMA_REGISTRY
       KAFKA_SASL_USERNAME: $KAFKA_SASL_USERNAME
       KAFKA_SASL_PASSWORD: $KAFKA_SASL_PASSWORD
 
@@ -102,7 +99,6 @@ services:
       NUM_DRIVERS: 80
       CITY: "Mountain View"
       KAFKA_BROKER: $KAFKA_BROKER
-      KAFKA_SCHEMA_REGISTRY: $KAFKA_SCHEMA_REGISTRY
       KAFKA_SASL_USERNAME: $KAFKA_SASL_USERNAME
       KAFKA_SASL_PASSWORD: $KAFKA_SASL_PASSWORD
 
@@ -113,7 +109,6 @@ services:
       NUM_DRIVERS: 100
       CITY: "Oakland"
       KAFKA_BROKER: $KAFKA_BROKER
-      KAFKA_SCHEMA_REGISTRY: $KAFKA_SCHEMA_REGISTRY
       KAFKA_SASL_USERNAME: $KAFKA_SASL_USERNAME
       KAFKA_SASL_PASSWORD: $KAFKA_SASL_PASSWORD
 
@@ -124,7 +119,6 @@ services:
       NUM_DRIVERS: 60
       CITY: "Palo Alto"
       KAFKA_BROKER: $KAFKA_BROKER
-      KAFKA_SCHEMA_REGISTRY: $KAFKA_SCHEMA_REGISTRY
       KAFKA_SASL_USERNAME: $KAFKA_SASL_USERNAME
       KAFKA_SASL_PASSWORD: $KAFKA_SASL_PASSWORD
 
@@ -135,7 +129,6 @@ services:
       NUM_DRIVERS: 80
       CITY: "Redwood City"
       KAFKA_BROKER: $KAFKA_BROKER
-      KAFKA_SCHEMA_REGISTRY: $KAFKA_SCHEMA_REGISTRY
       KAFKA_SASL_USERNAME: $KAFKA_SASL_USERNAME
       KAFKA_SASL_PASSWORD: $KAFKA_SASL_PASSWORD
 
@@ -146,7 +139,6 @@ services:
       NUM_DRIVERS: 40
       CITY: "San Bruno"
       KAFKA_BROKER: $KAFKA_BROKER
-      KAFKA_SCHEMA_REGISTRY: $KAFKA_SCHEMA_REGISTRY
       KAFKA_SASL_USERNAME: $KAFKA_SASL_USERNAME
       KAFKA_SASL_PASSWORD: $KAFKA_SASL_PASSWORD
 
@@ -157,7 +149,6 @@ services:
       NUM_DRIVERS: 80
       CITY: "San Leandro"
       KAFKA_BROKER: $KAFKA_BROKER
-      KAFKA_SCHEMA_REGISTRY: $KAFKA_SCHEMA_REGISTRY
       KAFKA_SASL_USERNAME: $KAFKA_SASL_USERNAME
       KAFKA_SASL_PASSWORD: $KAFKA_SASL_PASSWORD
 
@@ -168,7 +159,6 @@ services:
       NUM_DRIVERS: 60
       CITY: "San Mateo"
       KAFKA_BROKER: $KAFKA_BROKER
-      KAFKA_SCHEMA_REGISTRY: $KAFKA_SCHEMA_REGISTRY
       KAFKA_SASL_USERNAME: $KAFKA_SASL_USERNAME
       KAFKA_SASL_PASSWORD: $KAFKA_SASL_PASSWORD
 
@@ -179,7 +169,6 @@ services:
       NUM_DRIVERS: 70
       CITY: "Santa Clara"
       KAFKA_BROKER: $KAFKA_BROKER
-      KAFKA_SCHEMA_REGISTRY: $KAFKA_SCHEMA_REGISTRY
       KAFKA_SASL_USERNAME: $KAFKA_SASL_USERNAME
       KAFKA_SASL_PASSWORD: $KAFKA_SASL_PASSWORD
 
@@ -190,7 +179,6 @@ services:
       NUM_DRIVERS: 70
       CITY: "Sunnyvale"
       KAFKA_BROKER: $KAFKA_BROKER
-      KAFKA_SCHEMA_REGISTRY: $KAFKA_SCHEMA_REGISTRY
       KAFKA_SASL_USERNAME: $KAFKA_SASL_USERNAME
       KAFKA_SASL_PASSWORD: $KAFKA_SASL_PASSWORD
 
@@ -201,6 +189,5 @@ services:
       NUM_DRIVERS: 30
       CITY: "Union City"
       KAFKA_BROKER: $KAFKA_BROKER
-      KAFKA_SCHEMA_REGISTRY: $KAFKA_SCHEMA_REGISTRY
       KAFKA_SASL_USERNAME: $KAFKA_SASL_USERNAME
       KAFKA_SASL_PASSWORD: $KAFKA_SASL_PASSWORD
