--- a/example.env
+++ b/example.env
@@ -1,16 +1,16 @@
 PORT=8000
 
-KAFKA_BROKER=pkc-rgm37.us-west-2.aws.confluent.cloud:9092
-KAFKA_SASL_USERNAME=username
-KAFKA_SASL_PASSWORD=password
+KAFKA_BROKER=
+KAFKA_SASL_USERNAME=
+KAFKA_SASL_PASSWORD=
 
-SINGLESTORE_HOST=cluster.singlestore.com
+SINGLESTORE_HOST=
 SINGLESTORE_PORT=3306
 SINGLESTORE_USERNAME=admin
-SINGLESTORE_PASSWORD=password
+SINGLESTORE_PASSWORD=
 SINGLESTORE_DATABASE=rideshare_demo
 
-SNOWFLAKE_ACCOUNT=snowflake-account
+SNOWFLAKE_ACCOUNT=
 SNOWFLAKE_USER=RIDESHARE_INGEST
 SNOWFLAKE_PASSWORD=RIDESHARE_INGEST
 SNOWFLAKE_WAREHOUSE=RIDESHARE_INGEST
